fixes z-index syntax

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ header{
     text-align: center;
     font-size: 25px;
     line-height: 1;
-    transition: height .5s .2s cubic-bezier(0, 1, 0.5, 1), z-index ;
+    transition: height .5s .2s cubic-bezier(0, 1, 0.5, 1);
 }
 .solid{
     position: absolute;
